--- a/AccueilProjets.html
+++ b/AccueilProjets.html
@@ -92,6 +92,15 @@
 </main>
 
 <footer>
+  <p ID= "adresse">société Moreau SA<br>
+  12, rue du puit<br>
+  59100 ROUBAIX 20 00 00 00<br>
+  tel: 03 20 00 00 00</p>
+
+  <P id= "mail"> Moreau.SA@gmail.com</p>
+  <a id="mentions légales" href="https://url.com/" > Mentions légales
+
+</footer>
 
 
 
