corrction id to class

--- a/AccueilProjets.html
+++ b/AccueilProjets.html
@@ -19,8 +19,8 @@
 <body>
 
 <header>
-  <h1 id="Projecttitle">Mes projets en cours</h1>
-  <button type="button" name="se déconnecter"></button>
+  <h1 class="Projecttitle">Mes projets en cours</h1>
+  <p><button type="button" name="se déconnecter"></button></p>
   <!-- insert <<a href="vers log out">? -->
 </header>
 <main>
@@ -30,14 +30,14 @@
       <a href="url">Nouveau projet</a> <!-- "url"= lien vers formulaire -->
     </div>
 <!-- clickable card with principal items of the project -->
-    <article id="ProjectCard">
-      <h2 id="ProjectName" >"Nom du projet"</h2>
+    <article>
+      <h2 class="ProjectName" >"Nom du projet"</h2>
 
-        <p id="description"> description du projet</p>
+        <p class="description"> description du projet</p>
         <p>état d'avancement<p>
-          <p><progress id="avancement" value="50" max="100"></progress></p>
+          <p><progress class="avancement" value="50" max="100"></progress></p>
 
-        <ul id="coworker">
+        <ul class="coworker">
           <li> cowerkeruser</li>
           <li> cowerker1</li>
           <li> cowerker2</li>
@@ -45,14 +45,14 @@
         </ul>
     </article>
 
-    <article id= "ProjectCard">
-      <h2 id="ProjectName" >"Nom du projet"</h2>
+    <article>
+      <h2 class="ProjectName" >"Nom du projet"</h2>
 
-        <p id="description"> description du projet</p>
+        <p class="description"> description du projet</p>
         <p>état d'avancement</p>
-        <p><progress id="avancement" value="50" max="100"></progress></p>
+        <p><progress class="avancement" value="50" max="100"></progress></p>
 
-        <ul id= coworker>
+        <ul class=coworker>
           <li> cowerkeruser</li>
           <li> cowerker1</li>
           <li> cowerker2</li>
@@ -60,28 +60,28 @@
         </ul>
     </article>
 
-    <article id= "ProjectCard">
-      <h2 id="ProjectName" >"Nom du projet"</h2>
+    <article>
+      <h2 class="ProjectName" >"Nom du projet"</h2>
 
-        <p id="description"> description du projet</p>
+        <p class="description"> description du projet</p>
         <p>état d'avancement</p>
-        <p><progress id="avancement" value="50" max="100"></progress></p>
+        <p><progress class="avancement" value="50" max="100"></progress></p>
 
-        <ul id= coworker>
+        <ul class=coworker>
           <li> cowerkeruser</li>
           <li> cowerker1</li>
           <li> cowerker2</li>
           <li> cowerker3</li>
         </ul>
     </article>
-    <article id= "ProjectCard">
-      <h2 id="ProjectName" >"Nom du projet"</h2>
+    <article>
+      <h2 class="ProjectName" >"Nom du projet"</h2>
 
-        <p id="description"> description du projet</p>
+        <p class="description"> description du projet</p>
         <p>état d'avancement</p>
-        <p><progress id="avancement" value="50" max="100"></progress></p>
+        <p><progress class="avancement" value="50" max="100"></progress></p>
 
-        <ul id= coworker>
+        <ul class=coworker>
           <li> cowerkeruser</li>
           <li> cowerker1</li>
           <li> cowerker2</li>
@@ -92,13 +92,13 @@
 </main>
 
 <footer>
-  <p ID= "adresse">société Moreau SA<br>
+  <p class="adresse">société Moreau SA<br>
   12, rue du puit<br>
   59100 ROUBAIX 20 00 00 00<br>
   tel: 03 20 00 00 00</p>
 
-  <P id= "mail"> Moreau.SA@gmail.com</p>
-  <a id="mentions légales" href="https://url.com/" > Mentions légales
+  <P class="mail"> Moreau.SA@gmail.com</p>
+  <a class="mentions légales" href="https://url.com/" > Mentions légales
 
 </footer>
 
