html verified css started

--- a/AccueilProjets.html
+++ b/AccueilProjets.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
-  <meta name="description" content="">
+  <title>TodoProject</title>
+  <meta name="description" content="projet de todolist">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
@@ -19,14 +19,15 @@
 <body>
 
 <header>
-  <h1 class="Projecttitle">Mes projets en cours</h1>
-  <p><button type="button" name="se déconnecter"></button></p>
-  <!-- insert <<a href="vers log out">? -->
+  <h1 class="Projecttitle">Bienvenue dans l'espace de travail</h1>
+<a href="#" class="signout">Déconnection</a>
+  <!-- insert <<a href=" to log out">? -->
 </header>
 <main>
-  <section>
+  <section id="projectcards">
     <!-- clickable card to create a new project. will open a pop up form -->
-    <div>
+    <div class="projectcards">
+      <h2>Projets en cours</h2>
       <a href="url">Nouveau projet</a> <!-- "url"= lien vers formulaire -->
     </div>
 <!-- clickable card with principal items of the project -->
@@ -97,9 +98,8 @@
   59100 ROUBAIX 20 00 00 00<br>
   tel: 03 20 00 00 00</p>
 
-  <P class="mail"> Moreau.SA@gmail.com</p>
-  <a class="mentions légales" href="https://url.com/" > Mentions légales
-
+  <P class="mail"> Moreau.sa@gmail.com</p>
+  <a class="mentions légales" href="https://url.com/" > Mentions légales</a>
 </footer>
 
 
